/*
* Protos for function calls to the Aave Debt V3 Token adaptor.
*/

syntax = "proto3";
package steward.v4;

option go_package = "/steward_proto";

import "base.proto";

// Represents call data for the Aave Debt Token adaptor, used for borrowing and repaying debt on Aave.
message AaveV3DebtTokenAdaptorV1 {
    oneof function {
        /***** BASE ADAPTOR FUNCTIONS *****/

        // Represents function `revokeApproval(ERC20 asset, address spender)`
        RevokeApproval revoke_approval = 1;

        /***** ADAPTOR-SPECIFIC FUNCTIONS *****/

        // Represents function `borrowFromAave(ERC20 debtTokenToBorrow, uint256 amountToBorrow)`
        BorrowFromAave borrow_from_aave = 2;
        // Represents function `repayAaveDebt(ERC20 tokenToRepay, uint256 amountToRepay)`
        RepayAaveDebt repay_aave_debt = 3;
        // Represents function `repayWithATokens(ERC20 underlying, uint256 amount)`
        RepayWithATokens repay_with_a_tokens = 4;
    }

    /*
    * Allows strategists to borrow assets from Aave.
    *
    * Represents function `depositToAave(ERC20 tokenToDeposit, uint256 amountToDeposit)`
    */
    message BorrowFromAave {
        // The address of the ERC20 token to borrow
        string token = 1;
        // The amount to borrow
        string amount = 2;
    }

    /*
    * Allows strategists to repay loan debt on Aave.
    *
    * Represents function `repayAaveDebt(ERC20 tokenToRepay, uint256 amountToRepay)`
    */
    message RepayAaveDebt {
        // The address of the ERC20 token to repay
        string token = 1;
        // The amount to repay
        string amount = 2;
    }

    /*
    * Allows strategist to use aTokens to repay debt tokens with the same underlying.
    *
    * Represents function `repayWithATokens(ERC20 underlying, uint256 amount)`
    */
    message RepayWithATokens {
        // The address of the underlying ERC20 token to repay
        string underlying_token = 1;
        // The amount to repay
        string amount = 2;
    }
}

message AaveV3DebtTokenAdaptorV1Calls {
    repeated AaveV3DebtTokenAdaptorV1 calls = 1;
}
